--- a/DA0101EN/DA0101EN-Review-Data-Wrangling.ipynb
+++ b/DA0101EN/DA0101EN-Review-Data-Wrangling.ipynb
@@ -926,7 +926,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 56,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -938,6 +938,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Index(['symboling', 'normalized-losses', 'make', 'fuel-type', 'aspiration',\n",
+      "       'num-of-doors', 'body-style', 'drive-wheels', 'engine-location',\n",
+      "       'wheel-base', 'length', 'width', 'height', 'curb-weight', 'engine-type',\n",
+      "       'num-of-cylinders', 'engine-size', 'fuel-system', 'bore', 'stroke',\n",
+      "       'compression-ratio', 'horsepower', 'peak-rpm', 'city-mpg',\n",
+      "       'highway-mpg', 'price'],\n",
+      "      dtype='object')\n",
       "symboling\n",
       "False    205\n",
       "Name: symboling, dtype: int64\n",
@@ -1053,6 +1060,8 @@
     }
    ],
    "source": [
+    "print(missing_data.columns)\n",
+    "\n",
     "for column in missing_data.columns.values.tolist():\n",
     "    print(column)\n",
     "    print (missing_data[column].value_counts())\n",
@@ -2792,7 +2801,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 59,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -2806,7 +2815,7 @@
        "array([ 48.        , 119.33333333, 190.66666667, 262.        ])"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3829,7 +3838,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
