--- a/ML0101ENv3/ML0101EN-Clas-SVM-cancer-py-v1.ipynb
+++ b/ML0101ENv3/ML0101EN-Clas-SVM-cancer-py-v1.ipynb
@@ -720,25 +720,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The f1 score is: 0.9639038982104676\n"
-     ]
-    },
-    {
-     "ename": "NameError",
-     "evalue": "name 'jaccard_similarity_score1' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-20-d97472061fa3>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     11\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     12\u001b[0m \u001b[0;31m# jaccard index\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 13\u001b[0;31m \u001b[0mjaccard_similarity_score1\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0my_test\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0myhat1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     14\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"The jaccard index is:\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mjaccard_similarity_score1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'jaccard_similarity_score1' is not defined"
+      "The f1 score is: 0.9639038982104676\n",
+      "The jaccard index is: 0.9635036496350365\n"
      ]
     }
    ],
@@ -756,7 +746,7 @@
     "\n",
     "# jaccard index\n",
     "j_score = jaccard_similarity_score(y_test, yhat1)\n",
-    "print(\"The jaccard index is:\", jaccard_similarity_score)"
+    "print(\"The jaccard index is:\", j_score)"
    ]
   },
   {
